# OpenGL_Learning

./: CMakeLists.txt  README.md  main.cpp  vertex_shader.glsl
OpenGL_Libraries/glad/include/glad/: glad.h
OpenGL_Libraries/glad/src/: glad.c
